--- a/project-template/css/style.css
+++ b/project-template/css/style.css
@@ -1,3 +1,6 @@
 body{
-    background-color: rgb(28, 48, 79);
+    background-color: rgb(38, 66, 107);
+    text-align: center;
+    font-size: 40px;
+    padding: 20px;
 }
