--- a/projecttemp/css/style.css
+++ b/projecttemp/css/style.css
@@ -1,9 +1,14 @@
 html,
 body {
-  height: 100%;
+  background-image: url('starbg.jpg');
+  background-size: cover;
+  background-position: center;
+  margin: 0;
+  padding: 0;
+  /* height: 100%; */
 }
 
-body,
+/* body,
 h1,
 h2,
 h3,
@@ -15,14 +20,18 @@ p {
   padding: 0;
 }
 
+/* .bgimg{
+  background-image: url("starbg.jpg");
+}*/
+
 .box1{
-  background-color: antiquewhite;
+  background-color: lightblue;
   border-style: solid;
   border-color: #000000;
   border-width: 5px;
   width: 800px;
-  height: 150px;
-  font-size: 80px;
+  height: 100px;
+  font-size: 15px;
 
   padding:30px;
 
@@ -31,23 +40,51 @@ p {
   margin-right: auto;
   margin-left: auto;
 
+  
 }
 
 .container-landing-page {
-  width: 100px;
+  width: 1000px;
   height: 100px;
-  background-color: black;
+  background-color: lightblue;
+  border-style: solid;
+  border-width: 5px;
+  border-color: black;
 
+  margin-top: 80px;
+  margin-bottom: 100px;
+  margin-right: auto;
+  margin-left: auto;
 
-  /* Explore more with the flexbox properties! */
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
+/* .box2{
+  width: 800px;
+  height: 500px;
+  background-color: lightblue;
+  border-style: solid;
+  border-width: 5px;
+  border-color: black;
+
+  background-size: cover; 
+
+  margin-top: 150px;
+  margin-bottom: 80px;
+  margin-right: auto;
+  margin-left: auto;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+} */
+
 .main-container {
-  background-color: lightgray;
+  background-color: navy;
 
   display: flex;
   justify-content: center;
@@ -55,11 +92,41 @@ p {
 }
 
 .interface-container {
-  background-color: gray;
+  background-color: navy;
 
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+ .button{
+  text-align: center;
+  font-size: 50px;
+  font-family: cursive;
+  background-color: lightblue;
+  width:180px;
+  height:75px;
+  padding:10px;
+  margin-top: 125px;
+  margin-bottom: 80px;
+  margin-right: auto;
+  margin-left: auto;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: solid black;
+  border-width: 6px;
+
+} 
+
+body{
+  background-image: url('starbg.jpg');
+  background-size: cover;
+  background-position: center;
+  margin: 0;
+  padding: 0;
 }
 
 /* FLEXBOX PROPERTIES */
